--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
+    "vue-amazing-ui": "^1.10.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
