--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,20 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@headlessui/vue": "^1.7.23",
+    "@vueuse/core": "^12.0.0",
     "pinia": "^2.2.6",
+    "tailwind-scrollbar": "^3.1.0",
     "vue": "^3.5.13",
     "vue-amazing-ui": "^1.10.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
