--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "strict": true,
     "noImplicitAny": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "target": "esnext",
+    "lib": ["esnext", "dom"],
     "paths": {
       "@/*": ["./src/*"]
     }
