--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "strict": true,
     "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "module": "esnext",
     "moduleResolution": "bundler",
     "target": "esnext",
