--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "docs:preview": "vitepress preview docs"
     },
     "dependencies": {
+        "axios": "^1.7.9",
         "markdown-it": "^14.1.0",
         "markdown-it-mathjax3": "^4.3.2",
         "vitepress-plugin-comment-with-giscus": "^1.1.15"
